--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
   },
   "dependencies": {
     "date-fns": "^2.29.3",
+    "eslint-config-prettier": "^8.5.0",
     "gray-matter": "^4.0.3",
     "next": "latest",
+    "prettier": "^2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "remark": "^14.0.2",
@@ -25,6 +27,8 @@
     "eslint-plugin-next": "^0.0.0",
     "eslint-plugin-react": "^7.31.10",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "@typescript-eslint/parser": "^5.42.1",
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
     "tailwindcss": "^3.2.1",
     "@tailwindcss/typography": "^0.5.7"
   }
