feat: add plaiceholder

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "eslint-config-prettier": "^8.5.0",
     "gray-matter": "^4.0.3",
     "next": "latest",
+    "plaiceholder": "^2.5.0",
     "prettier": "^2.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
