--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prettier-plugin-tailwindcss": "^0.1.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.39.5",
     "recoil": "^0.7.6",
     "remark": "^14.0.2",
     "remark-html": "^15.0.1"
